--- a/README
+++ b/README
@@ -1,22 +1,22 @@
 B E E R M A P 2
 
-The vision of BeerMap is to create a piece of software 
-that is capable of accessing and manipulating a database
-of beers.  Currently, this database is populated by
-the dataset provided by Open Beer Database
-(http://openbeerdb.com/). BeerMap consists of the 
-server and database backend, a web front-end, and
-an android application front-end.  Currently, the
-android application is located here: 
-https://github.com/youcaughtafish/bm4a .
+The vision of BeerMap is to create a piece of software that is capable of accessing and manipulating a database of beers.  Currently, this database is populated by the dataset provided by Open Beer Database (http://openbeerdb.com/). BeerMap consists of the server and database backend, a web front-end, and an android application front-end.  Currently, the android application is located here: https://github.com/youcaughtafish/bm4a.
 
-This application is the second iteration of BeerMap,
-with this iteration created using Maven 
-(http://maven.apache.org/) and Spring MVC/web
-(http://www.springsource.org/).
+This application is the second iteration of BeerMap, with this iteration created using Maven (http://maven.apache.org/) and Spring MVC/web (http://www.springsource.org/). This application has been developed using Tomcat 7 (http://tomcat.apache.org/) and a MySQL database (http://www.mysql.com/).   Unless otherwise stated, this project is licensed under the Apache License, Version 2.0:
 
-This application has been developed using Tomcat
-7 (http://tomcat.apache.org/) and a MySQL database
-(http://www.mysql.com/).
+
+Copyright 2012 Dylan Moore
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
  
 
